Fix modal covering header with janky javascript

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,6 +113,7 @@ p {
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
+
   &:hover {
     text-decoration: none;
     color: none;
@@ -606,14 +607,12 @@ div.add-research_findings {
 /* Bootstrap Modal */
 
 .modal {
-
-  width: 900px; 
-  margin-top: -50px;
-  margin-left:  -450px !important; 
+  width: 60em; 
+  margin-top: -3em;
+  margin-left:  -30em !important;
 } 
 
-.modal-body {
-  width: 870px;
-}
+
+
 
 
